fixes bug 207846 "M17 FF09x [@ msvcrt.dll - nsStorageInputStream::Read] Miscellaneous non-repeatable browsing crashes" r=dbradley sr=bzbarsky